Save local changes before rebase

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,4 +1,4 @@
- {% extends "layouts/main.html" %}
+{% extends "layouts/main.html" %}
 
 {% set pageName="Home" %}
 
@@ -7,226 +7,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
 
     <h1 class="govuk-heading-xl">
-      Prototypes
+      {{ serviceName }}
     </h1>
 
-     <!-- Bilingual registration - under 16-->
-     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-     <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Bilingual registration - under 16</h2>
-     
-     <p class="govuk-body">
-       Bilingual registration for Welsh district. Continuation. 
-     </p>
-     
-     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 1 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-       In testing
-     </strong></h3>
- 
-     <p class="govuk-body">
-       <a href="bilingual_under16/round1/under16/sign-in.html">Under 16</a> - AP neonatal (under 24h)
-     </p>
-     <p class="govuk-body">
-      <a href="bilingual_under16/round1/under16_cn2/sign-in.html">Under 16 CN2</a> - CN2 with informant (under16)
-    </p>
-     
- 
-     <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Aga, Stefan or Sian</p>
-
-    <!-- Continuous improvement-->
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-    <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Continuous improvement</h2>
-    
-    <p class="govuk-body">
-      UR testing date of death qualifiers and long cause of death.
-    </p>
-    
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 1 <strong class="govuk-tag govuk-tag--green govuk-!-margin-bottom-2">
-      To be tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="continuousImprovement/round1/task1-MCCD/sign-in.html">Tasks 1</a> - MCCD
-    </p>
-
-    <p class="govuk-body">
-      <a href="continuousImprovement/round1/task2-99revA/sign-in.html">Tasks 2</a> - 99revA
-    </p>
-
-    <p class="govuk-body">
-      <a href="continuousImprovement/round1/task3-99revA/sign-in.html">Tasks 3</a> - 99revA
-    </p>
-
-    <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Jenny or Naima</p>
-
-    
-    <!-- Bilingual registration - over 16 -->
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-    <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Bilingual registration - over 16</h2>
-    
-    <p class="govuk-body">
-      Bilingual registration for Welsh district.
-    </p>
-    
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 1 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-      Tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="bilingual/round1/task1/sign-in.html">Tasks 1</a> - Create new record - over 16 journey (few tasks only)
-    </p>
-    <p class="govuk-body">
-      <a href="bilingual/round1/task2/sign-in.html">Tasks 2</a> - Access an existing record - over 16 journey (few tasks only)
-    </p>
-
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-      Tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="bilingual/round2/versionA/sign-in.html">Version A</a> - Max, over 16 journey, all tasks
-    </p>
-    <p class="govuk-body">
-      <a href="bilingual/round2/versionB/sign-in.html">Version B</a> - Min, over 16 joureny, all tasks
-    </p>
-    <p class="govuk-body">
-      <a href="bilingual/round2/versionA2/sign-in.html">Version A2</a> - Max, additional record
-    </p>
-
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 3 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-      Tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="bilingual/round3/versionA/pending-registrations.html">Version A</a> - Exisitng record: Evans James Iain. Max approach, full journey. 
-    </p>
-    <p class="govuk-body">
-      <a href="bilingual/round3/versionB/pending-registrations.html">Version B</a> - Exisitng record: Macdent Joan Iris. Min approach, full journey. 
-    </p>
-  
-  
-
-    <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Aga, Stefan or Andy</p>
-
-
-    <!-- Coroners-->
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-    <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Coroners</h2>
- 
-
-    <p class="govuk-body">
-      Introducing deaths that have been referred to by the coroner to DRS.
-    </p>
-
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 3 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-      Tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="coroners/round3/route1-99revA/sign-in.htm">Route 1</a> - 99revA - Coroner's inquest conclusion
-    </p>
-
-    <br><br>
- 
-     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-2">
-       Tested
-     </strong></h3>
-
-    <p class="govuk-body">
-      <a href="coroners/round2/route1-AP/sign-in.html">Route 1</a> - Attending practicioner 
-     </p>
-
-    <p class="govuk-body">
-      <a href="coroners/round2/route2-CN2-informant/sign-in.html">Route 2</a> - CN2 - Informant available
-    </p>
-
-    <p class="govuk-body">
-      <a href="coroners/round2/route3-CN2-additional-info-from-coroner/sign-in.html">Route 3</a> - CN2 - Additional information from the coroner
-    </p>
-
-    <p class="govuk-body">
-      <a href="coroners/round2/route4-99revA/sign-in.html">Route 4</a> - 99revA - Coroner's inquest conclusion
-    </p>
-
-   <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 4: Niamh, Jenny or Naima</p>
-
-
-    <!-- Under 16 registration-->
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-    <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Under 16 registration</h2>
-    
-
-    <p class="govuk-body">
-      Task list navigation. Main journey for under 16.
-    </p>
-    
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 2 <strong class="govuk-tag govuk-!-margin-bottom-2">
-      Tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="under16/round2/task1/sign-in.html">Tasks 1</a> - Pre-registration: creating of a new record
-    </p>
-
-    <p class="govuk-body">
-      <a href="under16/round2/task2/sign-in.html">Tasks 2</a> - Registration, with dummy data 1. Some tasks completed.
-    </p>
-
-    <p class="govuk-body">
-      <a href="under16/round2/task3/sign-in.html">Tasks 3</a> - Registration, with dummy data 2. Some tasks completed. 
-    </p>
-
-    <p class="govuk-body">
-      Task list navigation. Main journey for under 16.
-    </p>
-    
-    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Round 3 <strong class="govuk-tag govuk-!-margin-bottom-2">
-      Tested
-    </strong></h3>
-
-    <p class="govuk-body">
-      <a href="under16/round3/task1/sign-in.html">Tasks 1</a> - Pre-registration: creating of a new record
-    </p>
-
-    <p class="govuk-body">
-      <a href="under16/round3/task2/sign-in.html">Tasks 2</a> - Registration, with dummy data 1. Some tasks have change the status.
-    </p>
-
-    <p class="govuk-body">
-      <a href="https://app.mural.co/t/groproductfamily8710/m/groproductfamily8710/1716304069232/58ebbe56f0b18b8d371bc276dd0df0d5cf8e3b4f?fromVisitorModal=true&sender=agab0822">Tasks 3</a> - Mural - test of alternatives for content.
-    </p>
-
-    <p class="govuk-body-s govuk-!-margin-top-6">Got a question? Team 3: Aga, Stefan or Andy</p>
-
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-    <!-- Another prototype-->
-
-    <h2 class="govuk-heading-l govuk-!-margin-bottom-2">Template: Work name</h2>
-    <strong class="govuk-tag govuk-!-margin-bottom-4">
-      Status
-    </strong>
-
-    <p class="govuk-body">
-      <a href="#">Link</a>
-    </p>
-
-    <p class="govuk-body">
-      Short description.
-    </p>
-
-    <p class="govuk-body-s">Got a question? Team x: Interaction Designer, Content Designer, Researcher</p>
-
-
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-
+    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
   </div>
 </div>
 
