--- a/app/views/latest/medical-info-check.html
+++ b/app/views/latest/medical-info-check.html
@@ -191,14 +191,16 @@
         </dl>
      
 
-      <form action="03-tasklist" method="post" novalidate>
+      <form action="/latest/medical-info-check-form" method="post" novalidate>
 
         {{ govukButton({
-          text: "Save and continue"
+          text: "Save and return"
         }) }}
 
       </form>
 
     </div>
   </div>
+
+
 {% endblock %}
