--- a/app/views/latest/prepare-for-appointment.html
+++ b/app/views/latest/prepare-for-appointment.html
@@ -15,7 +15,7 @@
 
 
 
-      <form class="form" action="03-tasklist" method="post">
+      <form class="form" action="/latest/prepare-for-appointment-form" method="post">
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -24,7 +24,7 @@
             Prepare for appointment
           </h1>
   
-          <form class="form" action="../task-list" method="post">
+    
 
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset" aria-describedby="coverSheetPriority-hint" id="coverSheetPriority-fieldset" aria-required="false">
@@ -89,13 +89,13 @@
               }) }}
             </div>
   
-          </form>
+  
   
         </div>
       </div>
 
       </form>
 
- 
+
 
 {% endblock %}
