--- a/app/views/latest/uploads.html
+++ b/app/views/latest/uploads.html
@@ -15,7 +15,7 @@
 
 
 
-      <form class="form" action="03-tasklist" method="post">
+      <form class="form" action="/latest/uploads-form" method="post">
 
    
   
@@ -23,7 +23,7 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-l">Upload documents</h1>
-          <form class="form" action="03-tasklist.html" method="post">
+         
 
             <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
               Upload
@@ -39,7 +39,7 @@
               }) }}
             </div>
   
-          </form>
+        
   
         </div>
       </div>
