--- a/app/views/latest/comments.html
+++ b/app/views/latest/comments.html
@@ -15,7 +15,7 @@ href: "javascript:window.history.back()"
 
 
 
-<form class="form" action="03-tasklist" method="post">
+<form class="form" action="/latest/comments-form" method="post">
 
 
 
