--- a/app/views/latest/cause-of-death.html
+++ b/app/views/latest/cause-of-death.html
@@ -10,7 +10,7 @@ Cause of death – {{ serviceName }} – GOV.UK Prototype Kit
 
   {{ govukBackLink({
   text: "Back to record",
-  href: "03-tasklist-short.html"
+  href: "javascript:window.history.back()"
 }) }}
 
 <a class="govuk-link govuk-link--no-visited-state" href="" style="display: inline-block; position: relative; float: right; top: 15px;">View accented characters (opens in new window)</a>
