--- a/app/views/latest/child-details/place-of-stillbirth.html
+++ b/app/views/latest/child-details/place-of-stillbirth.html
@@ -6,12 +6,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
 
 {% block beforeContent %}
 
-{{ govukPhaseBanner({
-  tag: {
-    text: "Prototype"
-  },
-  html: 'This is a prototype, not the real service.'
-}) }}
+
 
   {{ govukBackLink({
   text: "Back to record",
@@ -23,59 +18,58 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
 
 {% block content %}
 
-  <div class="govuk-width-container">
-    <main class="govuk-main-wrapper" id="main-content" role="main">
+
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-l">
-            Place of death
+            Place of stillbirth
           </h1>
           
-          <form class="form" action="../task-list" method="post">
+          <form class="form" action="/latest/child-details/place-of-stillbirth-form" method="post">
 
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset" id="placeOfDeath">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                <!-- <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                   Where did the deceased die?
-                </legend>
+                </legend> -->
                 <div class="govuk-radios" data-module="govuk-radios">
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="communal-establishment" name="place-of-death" type="radio" value="communal-establishment" {{ checked('place-of-death', 'communal-establishment')}}>
                     <label class="govuk-label govuk-radios__label" for="communal-establishment">
                       Communal establishment
                     </label>
-                    <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                    <!-- <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
                       The deceased died in a hospital, care home, student halls or other managed residential accommodation.
-                    </div>
+                    </div> -->
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="home" name="place-of-death" type="radio" value="home" {{ checked('place-of-death', 'home')}}>
                     <label class="govuk-label govuk-radios__label" for="home">
                       Home
                     </label>
-                    <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                    <!-- <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
                       The deceased died in their own home.
-                    </div>
+                    </div> -->
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="in-transit" name="place-of-death" type="radio" value="in-transit" {{ checked('place-of-death', 'in-transit')}}>
                     <label class="govuk-label govuk-radios__label" for="in-transit">
                       In transit
                     </label>
-                    <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                    <!-- <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
                       The deceased died in a vehicle whose location at the time of death is known. 
-                    </div>
+                    </div> -->
                   </div>
                   <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="elsewhere" name="place-of-death" type="radio" value="elsewhere" {{ checked('place-of-death', 'elsewhere')}}>
                     <label class="govuk-label govuk-radios__label" for="elsewhere">
                       Elsewhere
                     </label>
-                    <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                    <!-- <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
                       The deceased died somewhere else and their location at the time of death is known.
-                    </div> 
+                    </div>  -->
                   </div>
-                  <div class="govuk-radios__item">
+                  <!-- <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="found-dead-on-arrival" name="place-of-death" type="radio" value="found-dead-on-arrival" {{ checked('place-of-death', 'found-dead-on-arrival')}}>
                     <label class="govuk-label govuk-radios__label" for="found-dead-on-arrival">
                       Not known – found dead on arrival 
@@ -92,7 +86,7 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
                     <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
                       It's not known where the deceased died, only where their body was found.
                     </div> 
-                  </div>
+                  </div> -->
                 </div>
               </fieldset>
             </div>
@@ -383,7 +377,6 @@ Place of death – {{ serviceName }} – GOV.UK Prototype Kit
         </div>
       </div>
   
-      </main>
-  </div>
+
 
 {% endblock %}
