--- a/app/views/latest/comments.html
+++ b/app/views/latest/comments.html
@@ -6,7 +6,7 @@ Question page template – {{ serviceName }} – GOV.UK Prototype Kit
 
 {% block beforeContent %}
 {{ govukBackLink({
-text: "Back",
+text: "Back to record",
 href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
