--- a/app/views/latest/informant-triage/01-who-is-informant.html
+++ b/app/views/latest/informant-triage/01-who-is-informant.html
@@ -6,7 +6,7 @@
 
 {% block beforeContent %}
   {{ govukBackLink({
-  text: "Back",
+  text: "Back to record",
   href: "javascript:window.history.back()"
 }) }}
 {% endblock %}
